--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
+    "slugify": "^1.6.6",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
